<resources>
    <string name="app_name">Iberdrola</string>
    <string name="appname">Prácticas Android</string>
    <string name="botonPR1">Práctica 1</string>
    <string name="botonPR2">Práctica 2</string>
    <string name="facturas">Facturas</string>
    <string name="consumo">Consumo</string>
    <string name="ajustes">Ajustes</string>
    <string name="atras">Atrás</string>
    <string name="smart_solar">Smart Solar</string>
    <string name="mi_instalaci_n">Mi instalación</string>
    <string name="energia">Energía</string>
    <string name="detalles">Detalles</string>
    <string name="txtInstalacion">Aquí tienes los datos de tu instalación fotovolcaica en tiempo real.</string>
    <string name="txtEnergia">Estamos trabajando en mejorar la App. Tus paneles solares siguen produciendo, en breve prodrás seguir viendo tu producción solar. Sentimos las molestias.</string>
    <string name="usuario">Usuario: </string>
    <string name="checkpass">Recordar contraseña</string>
    <string name="also">También puedes</string>
    <string name="lostpass">He olvidado mis datos</string>
    <string name="login">Entrar</string>
    <string name="register">Registrarse</string>
    <string name="iberdrola">¡Todo es mejor con Iberdrola!</string>
    <string name="pass">Contraseña:</string>
    <string name="cancel">Cancelar</string>
    <string name="usuario_signup">Indique un usuario:</string>
    <string name="pass_signup">Indique una contraseña:</string>
    <string name="enviar">Enviar</string>
    <string name="forgotpasstxt">Indique el correo al que le enviaremos la recuperación de la contraseña.</string>
    <string name="flecha_practica2">Pincha aquí para acceder a la práctica 2.</string>
    <string name="flecha_practica1">Pincha aquí para acceder a la práctica 1.</string>
    <string name="cau">CAU (Código Autoconsumo)</string>
    <string name="estadoSol">Estado solicitud alta consumidor</string>
    <string name="detallesinfo">Pinche aquí para más información de su solicitud.</string>
    <string name="detallesTipo">Tipo autoconsumo</string>
    <string name="detallesCompensacion">Compesación de excendentes</string>
    <string name="potencia">Potencia de instalación</string>
    <string name="estadoCon">Estado solicitud autoconsumo</string>
    <string name="aceptar">Aceptar</string>
    <string name="info_estadoCon">El tiempo estimado de activación de tu autoconsumo es de 1 a 2 meses, este variará en función de tu comunidad autónoma y distribuidora</string>
    <string name="autconsumo">Autoconsumo: 92%</string>
    <string name="info">Información</string>
    <string name="cerrar">Cerrar</string>
    <string name="info_facturas">Esta funcionalidad aún no está disponible.</string>
    <string name="filtrar_facturas">Filtrar facturas</string>
    <string name="filtrar_fecha">Con fecha de emisión</string>
    <string name="desde">Desde:</string>
    <string name="hasta">Hasta:</string>
    <string name="fechaFiltro">Día / Mes/ Año</string>
    <string name="importeFiltro">Por un importe</string>
    <string name="rangoImporte">0.0</string>
    <string name="filtroMIN">0€</string>
    <string name="filtroMAX">100€</string>
    <string name="estadoFiltro">Por estado</string>
    <string name="pagadas">Pagada</string>
    <string name="anuladas">Anuladas</string>
    <string name="cuota_fija">Cuota fija</string>
    <string name="pendientes_de_pago">Pendiente de pago</string>
    <string name="plan_de_pago">Plan de pago</string>
    <string name="aplicar">Aplicar</string>
    <string name="pendientePago">Pendiente de pago</string>
    <string name="fechafactura">Dia / Mes / Año</string>
    <string name="montofactura">68,54€</string>
    <string name="filters">Filters</string>
    <string name="lista">Lista</string>
    <string name="cerrarSes">CERRAR SESIÓN</string>
    <string name="signupText">Indica tus datos para poder registrarte en nuestra aplicación.</string>
    <string name="bienvenido">"Bienvenido, "</string>
    <string name="cancelarFiltro">Borrar selección</string>
    <string name="navegacion">Navegación</string>
    <string name="navegacion_info">Desde una aplicación Android, se pude acceder a páginas webs, mediante el navegador externo o mediante Webviews.</string>
    <string name="navegador">Navegador</string>
    <string name="webview">Webview</string>
    <string name="retromocl">Retromock</string>
    <string name="main_admin">Info para ADMIN</string>
    <string name="cambiar_tema">Cambiar tema</string>
    <string name="swLista">Permitir vista de facturas</string>
    <string name="alternar_tema">Alternar tema</string>
    <string name="confirmarPass">Confirmar contraseña:</string>
    <string name="getter">Escoge la conexión</string>
    <string name="ktor">Ktor</string>
    <string name="retromock">Retromock</string>
    <string name="retrofit">Retrofit</string>
    <string name="correo">Correo:</string>
    <string name="volver">Volver a inicio</string>


</resources>