<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/facturasFiltroXML"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.facturas.FacturasFiltroFragment">

    <TextView
        android:id="@+id/tv_filtrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtrar_facturas"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_filtrarFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtrar_fecha"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_filtrar"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_desde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desde"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tv_filtrarFecha"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_hasta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasta"
        android:layout_marginTop="20dp"
        android:layout_marginStart="200dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tv_filtrarFecha"
        app:layout_constraintStart_toStartOf="@id/tv_desde"
        />


    <Button
        android:id="@+id/bt_fechaDesde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechaFiltro"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desde"/>

    <Button
        android:id="@+id/bt_fechaHasta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechaFiltro"
        android:layout_marginTop="10dp"
        android:layout_marginStart="70dp"
        app:layout_constraintStart_toEndOf="@id/bt_fechaDesde"
        app:layout_constraintTop_toBottomOf="@id/tv_hasta"/>

    <View
        android:id="@+id/div_filtro1"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/bt_fechaDesde"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_importe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/importeFiltro"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/div_filtro1"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_rango"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rangoImporte"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_importe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_rangoMIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtroMIN"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_rango"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_rangoMAX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtroMAX"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="300dp"
        app:layout_constraintTop_toBottomOf="@id/tv_rango"
        app:layout_constraintStart_toEndOf="@id/tv_rangoMIN"
        />

    <SeekBar
        android:id="@+id/sb_importe"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rango"

        />

    <View
        android:id="@+id/div_filtro2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/sb_importe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estadoFiltro"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/div_filtro2"
        app:layout_constraintStart_toStartOf="parent"
        />

    <CheckBox
        android:id="@+id/cb_pagadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pagadas"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_estado"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:id="@+id/cb_anuladas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anuladas"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/cb_pagadas"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:id="@+id/cb_cuotafija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuota_fija"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/cb_anuladas"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:id="@+id/cb_pendientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pendientes_de_pago"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/cb_cuotafija"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:id="@+id/cb_planPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan_de_pago"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/cb_planPago"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/div_filtro3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="220dp"
        app:layout_constraintTop_toBottomOf="@id/tv_estado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        style="@style/boton_login"
        android:id="@+id/bt_aplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aplicar"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/div_filtro3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>