<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginXML"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">

    <ImageView
        android:id="@+id/iv_iberLogin"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/iberdrola_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/iberdrola" />


    <EditText
        android:id="@+id/et_NameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:inputType="text"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_iberLogin"
        android:hint="@string/usuario"
        android:autofillHints="" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_passLogin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="15"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/et_NameLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        >

        <EditText
            android:id="@+id/et_passLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cb_recordar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkpass"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_passLogin2"/>

    <TextView
        android:id="@+id/tv_LostPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lostpass"
        android:clickable="true"
        android:onClick="onTextViewClicked"
        android:focusable="true"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/cb_recordar"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        style="@style/botonIberdrola"
        android:id="@+id/bt_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_LostPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_also"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/also"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/bt_Login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:strokeWidth="2dp"
        android:id="@+id/bt_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/tv_also"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>