<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.facturas.FacturasFiltroActivity">

    <TextView
        android:id="@+id/tv_filtrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtrar_facturas"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_filtrarFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtrar_fecha"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_filtrar"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_desde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desde"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tv_filtrarFecha"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tv_hasta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasta"
        android:layout_marginTop="20dp"
        android:layout_marginStart="200dp"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tv_filtrarFecha"
        app:layout_constraintStart_toStartOf="@id/tv_desde"
        />

    <SeekBar
        android:id="@+id/seekBar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="368dp" />

</androidx.constraintlayout.widget.ConstraintLayout>