<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popupDetallesXML"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tv_popup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estadoCon"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_popup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_estadoCon"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        app:layout_constraintTop_toBottomOf="@id/tv_popup1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/bt_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_popup2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>