<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navegacionXML"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.navegacion.NavegacionActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mtb_nav"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_navegacion"
        app:title="@string/navegacion"
        android:contextClickable="true"
        />

    <TextView
        android:id="@+id/tv_navegacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navegacion_info"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/mtb_nav"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        />

    <Button
        android:id="@+id/bt_navegador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navegador"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toBottomOf="@id/tv_navegacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/bt_webview"/>

    <Button
        android:id="@+id/bt_webview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/webview"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@id/tv_navegacion"
        app:layout_constraintStart_toStartOf="@id/bt_navegador"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/div_nav"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/bt_webview"/>


    <WebView
        android:id="@+id/wb_nav"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/div_nav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>