<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/itemFacturasXML"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_fechaFactura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechafactura"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_estadoFactura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pendientePago"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/tv_fechaFactura"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_montoFactura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/montofactura"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_consultarFact"/>

    <ImageView
        android:id="@+id/iv_consultarFact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/chevron_right"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/fechafactura"
        android:clickable="true"
        android:focusable="true"
        />


</androidx.constraintlayout.widget.ConstraintLayout>